# 12factor-rs

./: Cargo.toml  config_sample.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: configuration.rs  configurationblah.rs  lib.rs  logging.rs  monitoring.rs
tests/: metrics_test.rs
