[package]
name = "twelve_factor"
version = "0.1.0"
authors = ["esolis <esolis@homeaway.com>"]
edition = "2018"

[dependencies]
config = "0.9"
log = "0.4"
flexi_logger = "0.11.4"
getopts = "0.2"
hyper = "0.12"
hyper-router = "0.5"
prometheus = "0.5"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.3"
futures = "0.1"
